[project]
name = "product-scraper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "audioop-lts==0.2.1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "discord-py==2.5.2",
    "frozenlist==1.7.0",
    "google-api-core==2.25.1",
    "google-api-python-client==2.173.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "google-genai==1.21.1",
    "googleapis-common-protos==1.70.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "multidict==6.5.0",
    "oauthlib==3.3.1",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pillow==11.2.1",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "selenium==4.33.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "tenacity==8.5.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "undetected-chromedriver==3.5.5",
    "uritemplate==4.2.0",
    "urllib3==2.4.0",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wsproto==1.2.0",
    "yarl==1.20.1",
]
